--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "games-server",
-  "module": "index.ts",
+  "name": "callous-conjunction",
   "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "peerDependencies": {
-    "typescript": "^5"
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
+    "astro": "^5.14.3",
+    "tailwindcss": "^4.1.14"
   }
 }
