--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.3",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "tailwindcss": "^4.1.14"
   }
 }
